# Rust-Z80

./: .gitignore  Cargo.toml  README.md
src/: gfx_decoder.rs  gui.rs  lib.rs  main.rs  memory.rs  pixel.rs  registers.rs  z80.rs
src/pacman/: mod.rs  pacman.rs
src/utils/: mod.rs  rom_loader.rs
tests/: ex8080.rs  opcodes.rs  palette.rs  prelim.rs  test_opcodes.rs  test_zex.rs  z80test.rs  zex.rs  zexdoc.rs
tests/resources/: foo.asm
