[package]
name = "Z80"
version = "0.1.0"
authors = ["Christian De Martino <chrisddm@gmail.com>"]
edition = "2018"

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
# pixels = "0.2.0"
pixels = { git = "https://github.com/parasyte/pixels" }
winit = "0.24"
env_logger = "0.8"
winit_input_helper = "0.9.0"
log = "0.4.8"
imgui-winit-support = "0.6.1"
imgui = "0.6.1"
imgui-wgpu = "0.12"