[package]
name = "Z80"
version = "0.1.0"
authors = ["Christian De Martino <chrisddm@gmail.com>"]
edition = "2021"

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
pixels = "0.10.0"
winit = "0.26"
env_logger = "0.8"
winit_input_helper = "0.12.0"
log = "0.4.8"
imgui = "0.8"
imgui-wgpu = "0.20"
imgui-winit-support = { version = "0.8", default-features = false, features = ["winit-26"] }
bitflags = "1.2.1"
gilrs = "0.8.1"
zip = "0.5.13"
[dev-dependencies]
png = "0.16.8"